--- a/Selenium-Web/.classpath
+++ b/Selenium-Web/.classpath
@@ -3,5 +3,25 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/AyushSingh/Downloads/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/jxl-2.6.jar/jxl-2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/commons-codec-1.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/commons-collections4-4.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/commons-compress-1.18.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/curvesapi-1.06.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/jaxb-api-2.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/jaxb-core-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/jaxb-impl-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/poi-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/poi-examples-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/poi-excelant-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/poi-ooxml-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/poi-ooxml-schemas-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/poi-scratchpad-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AyushSingh/Desktop/selenium jars/poi-bin-4.1.0-20190412(1)/poi-4.1.0/All Jars/xmlbeans-3.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
